--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,7 @@ body {
 
 /* MAIN CONTAINER */
 .mb-container {
-  max-width: 375pt;
+  max-width: 100vw;
   height: 100vh;
   overflow: hidden;
   background-color: #ffffff;
